# Scriptorium

./: .editorconfig  .gitattributes  .gitignore  .nvim.lua  404.html  Directory.Build.props  Directory.Packages.props  LICENSE.txt  README.md  build.bat  build.sh  dotnet-tools.json  index.html  main.slnx  package-lock.json  package.json  pyproject.toml
_astro/: Code.CG-MLVwe.css  Code.RSwmtqR8.css  Search.astro_astro_type_script_index_0_lang.T5b4f08a.js  Search.astro_astro_type_script_index_0_lang.xpG_Ezij.js  middleware.BI5t_Qcv.css  middleware.CfQssgP1.css  ui-core.B5P_3Yu-.js  ui-core.dFXanVVI.js
api/: index.html
docs/: Fable.Ink.Docs.fsproj  Scriptorium.Ink.Docs.fsproj  astro.config.mjs  packages.lock.json
fable-repros/: .gitignore  README.md
pagefind/: pagefind-entry.json  pagefind.en_1784575615.pf_meta  pagefind.en_194d13e014.pf_meta  pagefind.en_1d2199de63.pf_meta  pagefind.en_2512acd9af.pf_meta  pagefind.en_26a829443c.pf_meta  pagefind.en_3ae32d484f.pf_meta  pagefind.en_48889040f4.pf_meta  pagefind.en_4a3cc66991.pf_meta  pagefind.en_4af3f4a7d3.pf_meta  pagefind.en_62ef565c49.pf_meta  pagefind.en_86569d72f3.pf_meta  pagefind.en_87a5f354e6.pf_meta  pagefind.en_8a438c809f.pf_meta  pagefind.en_8c656db75f.pf_meta  pagefind.en_94f637cbf7.pf_meta  pagefind.en_a08f97ade9.pf_meta  pagefind.en_a5eeeae4cd.pf_meta  pagefind.en_ae3ec38de8.pf_meta  pagefind.en_b9d416b847.pf_meta  pagefind.en_be2bb536ee.pf_meta  pagefind.en_c4277cd780.pf_meta  pagefind.en_c51cc01f3b.pf_meta  pagefind.en_d2fd13ce9e.pf_meta  pagefind.en_f2f0e79d26.pf_meta  pagefind.en_f95fb31511.pf_meta  (+1 more)
(+2300 files in other folders)
